<resources>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="app_name">HNO Portal</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Demo TEXT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_pass">Forgot Password</string>
    <string name="login">Login</string>
    <string name="log">Login?</string>
    <string name="skip">Slkip</string>
    <string name="username">Username</string>
    <string name="sign_up_shareholder">Signup as Shareholder</string>
    <string name="first_time_login">First-Time Login?</string>
    <string name="forgot_everytihing">Forgot Everything?</string>
    <string name="new_user">New User?</string>
    <string name="last_id_digits">Last 4 digits of Tax ID/SSN</string>
    <string name="last_name_on_file">Last Name on file</string>
    <string name="verify">verify</string>
    <string name="first_time_stakeholder">First-Time Shareholders</string>
    <string name="first_time_share_holder_login">First Time Shareholder Login</string>
    <string name="last_name">Last Name</string>
    <string name="temporary_pin">Temporary Pin</string>
    <string name="SSNUM">Last 4 Digits of TaxID / SSNUM</string>
    <string name="forgot_every">Forgot Everything</string>
    <string name="first_time_stake">First-Time Shareholders?</string>
    <string name="instructions">Instructions will be send to the email address on file. This will only work if there is an email address on file.</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="transactiona">Transactions</string>
    <string name="pending_transactions">Pending Purchases</string>
    <string name="buy_shares">Buy Shares</string>
    <string name="profile">Profile</string>
    <string name="shareholder_updates">Shareholder Updates</string>
    <string name="file_download">File Download</string>
    <string name="logout">Logout</string>
    <string name="name">Ali Yousaf Kamboh</string>
    <string name="shareholder_id">Share Holder id: 4605</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">Checkout</string>
    <string name="total_transaction">Total Transactions:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="total_shares">Total Shares:</string>
    <string name="re_password">Confirm Password</string>
    <string name="tax_id">Tax ID/SSN</string>
    <string name="total_orders">Total Orders:</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="company">Company / Group</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="code">Zip Code</string>
    <string name="home_no">Home No</string>
    <string name="Cell_no">Cell No</string>
    <string name="suffix">Suffix</string>
    <string name="proceed">Proceed</string>
    <string name="username_password">UserName/Password</string>
    <string name="change_username">Change Username Password</string>
    <string name="pin_code">Pin Code</string>
    <string name="default_notification_channel_id">jhjhhj</string>
    <string name="default_notification_channel_title">nm,,m</string>
    <string name="invite">Invite</string>
    <string name="transfer_shares">Transfer Shares</string>
    <string name="No_Of_Shares">Number of shares to transfer</string>
    <string name="message">Message to Receiver (e.g Birthday Gift)</string>
    <string name="reset_username_password"><![CDATA[Reset Username & Password]]></string>
    <string name="reset_username_password_"><![CDATA[Reset Username & Password?]]></string>
</resources>