<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="10dp">
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent">
          <ImageView
              android:id="@+id/logo"
              android:layout_width="match_parent"
              android:layout_height="159dp"
              android:padding="20dp"
              android:src="@drawable/logo" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
              android:text="@string/forget_pass"
              android:textColor="@color/colorBlue"
              android:textSize="22sp"
              android:textStyle="bold" />

          <EditText
              android:id="@+id/edtEmailForgot"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:background="@drawable/bd_round_edt"
              android:layout_marginTop="20dp"
              android:hint="@string/email"
              android:paddingLeft="15dp" />

          <EditText
              android:id="@+id/edtLastDigitForgot"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:inputType="number"
              android:paddingLeft="15dp"
              android:maxLength="4"
              android:background="@drawable/bd_round_edt"
              android:hint="@string/last_id_digits"
              />

          <EditText
              android:id="@+id/edtLastNameForgot"
              android:layout_marginTop="10dp"
              android:layout_width="match_parent"
              android:layout_height="45dp"
              android:paddingLeft="15dp"
              android:background="@drawable/bd_round_edt"
              android:hint="@string/last_name_on_file" />

          <Button
              android:id="@+id/btnVerifyForgot"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              android:background="@drawable/bg_round_btn"
              android:text="@string/verify"
              android:textColor="@color/colorWhite" />

          <TextView
              android:id="@+id/tvLoginForgot"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="right"
              android:padding="5dp"
              android:textColor="@color/colorBlue"
              android:textSize="18sp"
              android:text="@string/log" />


          <TextView
              android:visibility="gone"
              android:id="@+id/tvFirstTimeShareHolder"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:padding="5dp"
              android:textColor="@color/colorBlue"
              android:textSize="18sp"
              android:text="@string/first_time_stakeholder" />

          <TextView
              android:id="@+id/tvForgotEverthingF"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="left"
              android:padding="5dp"
              android:textColor="@color/colorBlue"
              android:textSize="18sp"
              android:text="@string/reset_username_password_"
              />
      </LinearLayout>
  </RelativeLayout>



    <LinearLayout
        android:id="@+id/prForgot"
        android:visibility="gone"
        android:background="@color/colorLightGreen"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:theme="@style/AppTheme.WhiteAccent"
            />
    </LinearLayout>

</RelativeLayout>