<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstTimeShareHolderLoginActivity">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:padding="20dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Set Username Password"
            android:textColor="@color/colorBlue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtUsernameS"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bd_round_edt"
            android:paddingLeft="15dp"
            android:layout_marginTop="20dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/edtPinCodeS"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bd_round_edt"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/pin_code" />
        <EditText
            android:id="@+id/edtPasswordS"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bd_round_edt"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/edtConfirmPasswordS"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bd_round_edt"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:hint="@string/re_password" />

        <Button
            android:id="@+id/btnSetUsernamePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/bg_round_btn"
            android:text="Set Username/Password" />


    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:background="@color/colorLightGreen"
        android:id="@+id/prSetUserNamePassword"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:theme="@style/AppTheme.WhiteAccent"
            />
    </LinearLayout>
</RelativeLayout>